Refactor workflow to direct API calls without MCP bridge

--- a/.env.example
+++ b/.env.example
@@ -41,11 +41,12 @@ GIT_USER_NAME=elecvery-bot
 GIT_USER_EMAIL=elecvery-bot@example.com
 
 # ----------------------------
-# MCP Bridge endpoint (n8n calls this via HTTP Request nodes)
-# You can point to a local bridge service or internal gateway.
+# AI + API tokens (used directly by n8n HTTP Request nodes)
 # ----------------------------
-MCP_BRIDGE_BASE_URL=http://host.docker.internal:8090
-MCP_BRIDGE_TOKEN=replace-me
+OPENAI_API_KEY=replace-with-openai-api-key
+OPENAI_MODEL=gpt-4o-mini
+SLACK_BOT_TOKEN=xoxb-replace-me
+GITHUB_TOKEN=ghp_replace_me
 
 # ----------------------------
 # Repository metadata for GitHub links/issue creation
