--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,8 +65,13 @@ services:
       QUEUE_BULL_REDIS_HOST: redis
       QUEUE_BULL_REDIS_PORT: 6379
 
-      MCP_BRIDGE_BASE_URL: ${MCP_BRIDGE_BASE_URL}
-      MCP_BRIDGE_TOKEN: ${MCP_BRIDGE_TOKEN}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+      OPENAI_MODEL: ${OPENAI_MODEL}
+      SLACK_BOT_TOKEN: ${SLACK_BOT_TOKEN}
+      GITHUB_TOKEN: ${GITHUB_TOKEN}
+      GITHUB_OWNER: ${GITHUB_OWNER}
+      GITHUB_REPO: ${GITHUB_REPO}
+      SLACK_DEFAULT_CHANNEL_ID: ${SLACK_DEFAULT_CHANNEL_ID}
       TARGET_REPO_DEFAULT_BRANCH: ${TARGET_REPO_DEFAULT_BRANCH}
       GIT_USER_NAME: ${GIT_USER_NAME}
       GIT_USER_EMAIL: ${GIT_USER_EMAIL}
@@ -104,8 +109,13 @@ services:
       QUEUE_BULL_REDIS_HOST: redis
       QUEUE_BULL_REDIS_PORT: 6379
 
-      MCP_BRIDGE_BASE_URL: ${MCP_BRIDGE_BASE_URL}
-      MCP_BRIDGE_TOKEN: ${MCP_BRIDGE_TOKEN}
+      OPENAI_API_KEY: ${OPENAI_API_KEY}
+      OPENAI_MODEL: ${OPENAI_MODEL}
+      SLACK_BOT_TOKEN: ${SLACK_BOT_TOKEN}
+      GITHUB_TOKEN: ${GITHUB_TOKEN}
+      GITHUB_OWNER: ${GITHUB_OWNER}
+      GITHUB_REPO: ${GITHUB_REPO}
+      SLACK_DEFAULT_CHANNEL_ID: ${SLACK_DEFAULT_CHANNEL_ID}
       TARGET_REPO_DEFAULT_BRANCH: ${TARGET_REPO_DEFAULT_BRANCH}
       GIT_USER_NAME: ${GIT_USER_NAME}
       GIT_USER_EMAIL: ${GIT_USER_EMAIL}
