Add BigQuery polling enrichment and recovery readiness checks

--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,22 @@ SLACK_BOT_TOKEN=xoxb-replace-me
 GITHUB_TOKEN=ghp_replace_me
 
 # ----------------------------
+# BigQuery polling for Crashlytics context enrichment
+# - BIGQUERY_SERVICE_ACCOUNT_JSON accepts either:
+#   1) raw one-line JSON string
+#   2) base64-encoded JSON string
+# - BIGQUERY_CRASHLYTICS_TABLE is optional (leave empty to auto-detect by issue_id column)
+# ----------------------------
+BIGQUERY_PROJECT_ID=replace-with-gcp-project-id
+BIGQUERY_DATASET_ID=firebase_crashlytics
+BIGQUERY_CRASHLYTICS_TABLE=
+BIGQUERY_SERVICE_ACCOUNT_JSON=replace-with-service-account-json-or-base64
+BIGQUERY_POLL_INITIAL_DELAY_SECONDS=90
+BIGQUERY_POLL_INTERVAL_SECONDS=180
+BIGQUERY_POLL_MAX_ATTEMPTS=6
+BIGQUERY_CONTEXT_MAX_CHARS=12000
+
+# ----------------------------
 # Repository metadata for GitHub links/issue creation
 # ----------------------------
 GITHUB_OWNER=tbuelecvery
