--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,6 +72,14 @@ services:
       GITHUB_OWNER: ${GITHUB_OWNER}
       GITHUB_REPO: ${GITHUB_REPO}
       SLACK_DEFAULT_CHANNEL_ID: ${SLACK_DEFAULT_CHANNEL_ID}
+      BIGQUERY_PROJECT_ID: ${BIGQUERY_PROJECT_ID}
+      BIGQUERY_DATASET_ID: ${BIGQUERY_DATASET_ID}
+      BIGQUERY_CRASHLYTICS_TABLE: ${BIGQUERY_CRASHLYTICS_TABLE}
+      BIGQUERY_SERVICE_ACCOUNT_JSON: ${BIGQUERY_SERVICE_ACCOUNT_JSON}
+      BIGQUERY_POLL_INITIAL_DELAY_SECONDS: ${BIGQUERY_POLL_INITIAL_DELAY_SECONDS}
+      BIGQUERY_POLL_INTERVAL_SECONDS: ${BIGQUERY_POLL_INTERVAL_SECONDS}
+      BIGQUERY_POLL_MAX_ATTEMPTS: ${BIGQUERY_POLL_MAX_ATTEMPTS}
+      BIGQUERY_CONTEXT_MAX_CHARS: ${BIGQUERY_CONTEXT_MAX_CHARS}
       TARGET_REPO_DEFAULT_BRANCH: ${TARGET_REPO_DEFAULT_BRANCH}
       GIT_USER_NAME: ${GIT_USER_NAME}
       GIT_USER_EMAIL: ${GIT_USER_EMAIL}
@@ -116,6 +124,14 @@ services:
       GITHUB_OWNER: ${GITHUB_OWNER}
       GITHUB_REPO: ${GITHUB_REPO}
       SLACK_DEFAULT_CHANNEL_ID: ${SLACK_DEFAULT_CHANNEL_ID}
+      BIGQUERY_PROJECT_ID: ${BIGQUERY_PROJECT_ID}
+      BIGQUERY_DATASET_ID: ${BIGQUERY_DATASET_ID}
+      BIGQUERY_CRASHLYTICS_TABLE: ${BIGQUERY_CRASHLYTICS_TABLE}
+      BIGQUERY_SERVICE_ACCOUNT_JSON: ${BIGQUERY_SERVICE_ACCOUNT_JSON}
+      BIGQUERY_POLL_INITIAL_DELAY_SECONDS: ${BIGQUERY_POLL_INITIAL_DELAY_SECONDS}
+      BIGQUERY_POLL_INTERVAL_SECONDS: ${BIGQUERY_POLL_INTERVAL_SECONDS}
+      BIGQUERY_POLL_MAX_ATTEMPTS: ${BIGQUERY_POLL_MAX_ATTEMPTS}
+      BIGQUERY_CONTEXT_MAX_CHARS: ${BIGQUERY_CONTEXT_MAX_CHARS}
       TARGET_REPO_DEFAULT_BRANCH: ${TARGET_REPO_DEFAULT_BRANCH}
       GIT_USER_NAME: ${GIT_USER_NAME}
       GIT_USER_EMAIL: ${GIT_USER_EMAIL}
